Replace uses of java.util.list.getFirst().